samples/_failures_safe/1761278108_3d87f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb79de79.c: In function ‘main’:
./samples/SAFE/__tmp_eb79de79.c:131:25: error: expected ‘;’ at end of input
  131 |     mat2.cols = read_int
      |                         ^
      |                         ;
./samples/SAFE/__tmp_eb79de79.c:131:5: error: expected declaration or statement at end of input
  131 |     mat2.cols = read_int
      |     ^~~~
